:bug: :bug_fix: #25 added word-wrap to .css

--- a/src/styles/Chatbot.css
+++ b/src/styles/Chatbot.css
@@ -24,4 +24,5 @@
 
 .react-chatbot-kit-user-chat-message {
   max-width: 73%;
+  word-wrap: break-word;
 }
